SubBt/force-app/main/default/objects/Question_Result__c/Question_Result__c.object-meta.xml
<CustomObject>
    <label>Selection Option Result</label>
    <nameField>
        <label>Question Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selection Option Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>