SubBt/force-app/main/default/objects/Question_Result__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selection Option</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Selection Option Results</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>