SubBt/force-app/main/default/objects/Question_Result__c/fields/Selection_Category__c.field-meta.xml
<CustomField>
    <fullName>Selection_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selection Category</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Selection Option Results</relationshipLabel>
    <relationshipName>Selection_Option_Results</relationshipName>
    <type>Lookup</type>
</CustomField>