SubBt/force-app/main/default/objects/Question_Result__c/fields/Tested__c.field-meta.xml
<CustomField>
    <fullName>Tested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tested</label>
    <type>Checkbox</type>
</CustomField>