SubBt/force-app/main/default/objects/Question_Result__c/fields/Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Text_Value__c</fullName>
    <label>Text Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>